--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="SierraApps.css">
     </head>
+    <header id="header1"></header>
     <body id="Body1">
     </body>
 </html>
