--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="SierraApps.css">
     </head>
-    <header id="header1"></header>
+    <header id="header1">n  kjbk</header>
     <body id="Body1">
     </body>
 </html>
